--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build
 
 on: [push, pull_request]
 
+jobs:
+  # === Windows ===
   windows:
     runs-on: windows-2019
 
@@ -19,7 +21,7 @@ on: [push, pull_request]
         shell: cmd
         run: |
           cd build
-          cmake -G "Visual Studio 16 2019" -DBUILD_SDLGPU=On -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_WITH_ALL=ON ..
+          cmake -G "Visual Studio 16 2019" -DBUILD_SDLGPU=On -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_WITH_ALL=ON -PBUILD_PRO=On ..
           cmake --build . --config MinSizeRel --parallel
 
       - name: Deploy
@@ -30,13 +32,7 @@ on: [push, pull_request]
             build/bin/tic80.exe
             build/bin/*.dll
 
-      - name: Build Pro
-        shell: cmd
-        run: |
-          cd build
-          cmake -G "Visual Studio 16 2019" -DBUILD_SDLGPU=On -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_PRO=On -DBUILD_WITH_ALL=ON ..
-          cmake --build . --config MinSizeRel --parallel
-
+  # === Ubuntu ===
   linux:
     runs-on: ubuntu-20.04
 
@@ -58,7 +54,7 @@ on: [push, pull_request]
       - name: Build
         run: |
           cd build
-          cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_SDLGPU=On -DBUILD_WITH_ALL=ON ..
+          cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_SDLGPU=On -DBUILD_WITH_ALL=ON -PBUILD_PRO=On ..
           cmake --build . --config MinSizeRel --parallel
 
       - name: Deploy
@@ -69,12 +65,7 @@ on: [push, pull_request]
             build/bin/tic80
             build/bin/*.so
 
-      - name: Build Pro
-        run: |
-          cd build
-          cmake -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_SDLGPU=On -DBUILD_PRO=On -DBUILD_WITH_ALL=ON ..
-          cmake --build . --config MinSizeRel --parallel
-
+  # === Android ===
   android:
     runs-on: ubuntu-latest
 
@@ -102,7 +93,7 @@ on: [push, pull_request]
         run: |
           cd build/android
           chmod +x gradlew
-          ./gradlew assembleRelease
+          ./gradlew assembleRelease -PBUILD_PRO=On
           cp app/build/outputs/apk/release/app-release.apk tic80.apk
 
         env:
